--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket deploylambdafunctions 
-                                   --output-template-file outputSamTemplate.yaml
+      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id 3102f0c2-a0b4-4004-885d-d7a376d08822 --s3-bucket deploylambdafunctions
 artifacts:
   type: zip
   files:
