--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id kms-key-id --s3-bucket codepipeline-us-east-2-148784455973
+      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id 87ec36ae-b8d9-4626-bfbd-1a0bfeac1674 --s3-bucket codepipeline-us-east-2-148784455973
 artifacts:
   type: zip
   files:
