--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,15 @@
 
+
 version: 0.2
 phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id 87ec36ae-b8d9-4626-bfbd-1a0bfeac1674 --s3-bucket codepipeline-us-east-2-148784455973
+      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id 87ec36ae-b8d9-4626-bfbd-1a0bfeac1674 --s3-bucket codepipeline-us-east-2-148784455973 
+                                   --output-template-file outputSamTemplate.yaml
 artifacts:
   type: zip
   files:
     - samTemplate.yaml
     - outputSamTemplate.yaml
+
